--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Muhammad Awais Laal - Aspiring Gen AI Specialist Portfolio</title>
   <meta name="description" content="Portfolio of Muhammad Awais Laal, an Aspiring Gen AI Specialist offering expertise in AI development, machine learning, data analysis, and web applications.">
   <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/6295/6295638.png" type="image/x-icon">
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Lora:wght@400;500&display=swap" rel="stylesheet">
