--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
       <div class="whatsapp-message" id="whatsapp-message"></div>
     </div>
   </main>
-  <script src="./assets/js/script.js"></script>
+  <script src="script.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
