--- a/index.html
+++ b/index.html
@@ -459,7 +459,27 @@
                   <a href="https://salary-predection-4wblecbrpftv3tdy3verjp.streamlit.app/" class="project-link-btn live-preview" target="_blank" aria-label="Live preview">Live Preview</a>
                 </div>
               </div>
+              
             </li>
+                 <li class="project-item active glow-border-rainbow" data-filter-item data-category="all" data-project-id="salary-prediction">
+              <div class="project-content">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="https://www.freepik.com/premium-vector/buy-sell-indicators-forex-market-rending-forex-price-action-candles-red-green_38605721.htm#from_element=cross_selling__vector" alt="Salary Prediction project screenshot" loading="lazy">
+                </figure>
+                <h3 class="project-title">XAUUSD Signal Predictor</h3>
+                <p class="project-description">It predict signal with 95%+ accuracy for Gold with the help of real current and previous data, It is Subscruption based.Contact to gain access</p>
+                <div class="project-links">
+                  <a href="https://xauusd-pred-lluubmf3yznawydgrfpjax.streamlit.app/" class="project-link-btn" target="_blank" aria-label="GitHub repository">
+                    <ion-icon name="logo-github"></ion-icon> GitHub
+                  </a>
+                  <a href="https://xauusd-pred-lluubmf3yznawydgrfpjax.streamlit.app/" class="project-link-btn live-preview" target="_blank" aria-label="Live preview">Live Preview</a>
+                </div>
+              </div>
+            </li>
+            
             <li class="project-item active glow-border-rainbow" data-filter-item data-category="all" data-project-id="video-downloader">
               <div class="project-content">
                 <figure class="project-img">
