--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </figure>
         <div class="info-content">
           <h1 class="name" title="Muhammad Awais Laal">Muhammad Awais Laal</h1>
-          <p class="title">Aspiring Gen AI Specialist</p>
+          <p class="title">Aspiring Gen AI Developer</p>
         </div>
         <button class="info_more-btn" data-sidebar-btn aria-label="Toggle contacts">
           <span>Show Contacts</span>
@@ -107,7 +107,7 @@
             <button class="navbar-link" data-nav-link>Resume</button>
           </li>
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Portfolio</button>
+            <button class="navbar-link" data-nav-link>Projects</button>
           </li>
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Contact</button>
@@ -123,7 +123,7 @@
         </header>
         <section class="about-text">
           <p>
-            I'm Muhammad Awais Laal, an Aspiring Gen AI Specialist from Punjab, Pakistan, passionate about creating innovative AI solutions. With expertise in machine learning, deep learning, and web development, I build scalable applications to solve real-world problems.
+            I'm Muhammad Awais Laal, an Aspiring Gen AI Developer and web developer from Punjab, Pakistan, passionate about creating innovative AI solutions. With expertise in machine learning, deep learning, and web development, I build scalable applications to solve real-world problems.
           </p>
           <p>
             My mission is to drive impact through AI-driven technologies. I collaborate with clients across industries, delivering high-quality, tailored solutions. Explore my portfolio to see my work!
@@ -467,7 +467,7 @@
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="https://www.freepik.com/premium-vector/buy-sell-indicators-forex-market-rending-forex-price-action-candles-red-green_38605721.htm#from_element=cross_selling__vector" alt="Salary Prediction project screenshot" loading="lazy">
+                  <img src="https://img.freepik.com/free-vector/candle-stick-forex-trading-chart-background-financial-growth_1017-49808.jpg?ga=GA1.1.687002338.1742226390&semt=ais_hybrid&w=740" alt="Salary Prediction project screenshot" loading="lazy">
                 </figure>
                 <h3 class="project-title">XAUUSD Signal Predictor</h3>
                 <p class="project-description">It predict signal with 95%+ accuracy for Gold with the help of real current and previous data, It is Subscruption based.Contact to gain access</p>
