--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <aside class="sidebar" data-sidebar>
       <div class="sidebar-info">
         <figure class="avatar-box">
-          <img src="https://media.licdn.com/dms/image/v2/D5603AQEONdV_HQNbCA/profile-displayphoto-shrink_400_400/B56ZWL4RBKGoAg-/0/1741808539026?e=1755734400&v=beta&t=nxTBgleapp7nbz61GXOOZxnwylPf0xiUzjtfTtvlTbM" alt="Muhammad Awais Laal" width="80">
+          <img src="https://avatars.githubusercontent.com/u/199569350?v=4" alt="Muhammad Awais Laal" width="80">
           <span class="live-dot"></span>
         </figure>
         <div class="info-content">
