--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <button class="navbar-link" data-nav-link>Resume</button>
           </li>
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Projects</button>
+            <button class="navbar-link" data-nav-link>Portfolio</button>
           </li>
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Contact</button>
