--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
             <div class="contact-info">
               <p class="contact-title">Experience</p>
-              <p>3+ Years in AI & ML</p>
+              <p>3+ Years in AI,ML& Web D </p>
             </div>
           </li>
         </ul>
