--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="https://sora.chatgpt.com/g/gen_01jzdhv5mrfbmstshqxaeamh5q" alt="Churn Modeling project screenshot" loading="lazy">
+                  <img src="https://videos.openai.com/vg-assets/assets%2Ftask_01jzdhv52af0qad5bk4535qe72%2F1751727921_img_0.webp?st=2025-07-05T13%3A50%3A02Z&se=2025-07-11T14%3A50%3A02Z&sks=b&skt=2025-07-05T13%3A50%3A02Z&ske=2025-07-11T14%3A50%3A02Z&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skoid=8ebb0df1-a278-4e2e-9c20-f2d373479b3a&skv=2019-02-02&sv=2018-11-09&sr=b&sp=r&spr=https%2Chttp&sig=hswF%2B%2FZFVUHkY%2FBuLiIif%2BRrZ5oHF75pZ%2Fv84sxTZSQ%3D&az=oaivgprodscus" alt="Churn Modeling project screenshot" loading="lazy">
                 </figure>
                 <h3 class="project-title">Churn Modeling</h3>
                 <p class="project-description">A machine learning model to predict customer churn using neural networks, built with TensorFlow and deployed on Streamlit.</p>
@@ -508,64 +508,7 @@
               </div>
             </li>
 
-<!--             <li class="project-item active glow-border-rainbow" data-filter-item data-category="all" data-project-id="video-downloader">
-              <div class="project-content">
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-                  <img src="https://scontent.flhe17-1.fna.fbcdn.net/v/t39.30808-6/511955817_12213633819878324" alt="Social Media Video Downloader project screenshot" loading="lazy">
-                </figure>
-                <h3 class="project-title">Tecrix Website</h3>
-                <p class="project-description">A wordpress website that is sample of our work done </p>
-                <div class="project-links">
-                  <a href="https://tecrix.io/" class="project-link-btn" target="_blank" aria-label="GitHub repository">
-                    <ion-icon name="logo-github"></ion-icon> GitHub
-                  </a>
-                  <a href="https://tecrix.io/" class="project-link-btn live-preview" target="_blank" aria-label="Live preview">Live Preview</a>
-                </div>
-              </div>
-            </li> -->
 
-<!--             <li class="project-item active glow-border-rainbow" data-filter-item data-category="all" data-project-id="video-downloader">
-              <div class="project-content">
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-                  <img src="https://scontent.flhe17-1.fna.fbcdn.net/v/t39.30808-6/510777412_122136338720783242_1728495961010211794_n.jpg?stp=dst-jpg_s1080x2048_tt6&_nc_cat=102&ccb=1-7&_nc_sid=127cfc&_nc_ohc=_9S2AFwhv-8Q7kNvwGm8cHC&_nc_oc=Admhc3LIDdIFy9ZCoBz3kXx7_59F9S501MbqWVpusLiaqKTk0VHvaQhQvJCzcrTIPj4&_nc_zt=23&_nc_ht=scontent.flhe17-1.fna&_nc_gid=yB6wGvNtm1RP1Dz4QOLfxw&oh=00_AfPUWi3F5KAeWVi1gC25q2P32OSJIf1jARdFDg3WgVkp2g&oe=6860AC83" alt="Social Media Video Downloader project screenshot" loading="lazy">
-                </figure>
-                <h3 class="project-title">Project Innova</h3>
-                <p class="project-description">A wordpress website that is also a sample of our work done for project innova  </p>
-                <div class="project-links">
-                  <a href="https://projectinnova.com/" class="project-link-btn" target="_blank" aria-label="GitHub repository">
-                    <ion-icon name="logo-github"></ion-icon> GitHub
-                  </a>
-                  <a href="https://projectinnova.com/" class="project-link-btn live-preview" target="_blank" aria-label="Live preview">Live Preview</a>
-                </div>
-              </div>
-            </li>
-
-<!--             <li class="project-item active glow-border-rainbow" data-filter-item data-category="all" data-project-id="video-downloader">
-              <div class="project-content">
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-                  <img src="https://scontent.flhe17-1.fna.fbcdn.net/v/t39.30808-6/510777412_122136338720783242_1728495961010211794_n.jpg?stp=dst-jpg_s1080x2048_tt6&_nc_cat=102&ccb=1-7&_nc_sid=127cfc&_nc_ohc=_9S2AFwhv-8Q7kNvwGm8cHC&_nc_oc=Admhc3LIDdIFy9ZCoBz3kXx7_59F9S501MbqWVpusLiaqKTk0VHvaQhQvJCzcrTIPj4&_nc_zt=23&_nc_ht=scontent.flhe17-1.fna&_nc_gid=yB6wGvNtm1RP1Dz4QOLfxw&oh=00_AfPUWi3F5KAeWVi1gC25q2P32OSJIf1jARdFDg3WgVkp2g&oe=6860AC83" alt="Social Media Video Downloader project screenshot" loading="lazy">
-                </figure>
-                <h3 class="project-title">Project Innova</h3>
-                <p class="project-description">A wordpress website that is also a sample of our work done for project innova  </p>
-                <div class="project-links">
-                  <a href="https://projectinnova.com/" class="project-link-btn" target="_blank" aria-label="GitHub repository">
-                    <ion-icon name="logo-github"></ion-icon> GitHub
-                  </a>
-                  <a href="https://projectinnova.com/" class="project-link-btn live-preview" target="_blank" aria-label="Live preview">Live Preview</a>
-                </div>
-              </div>
-            </li>
-            
-             --> -->
 
               <li class="project-item active glow-border-rainbow" data-filter-item data-category="all" data-project-id="image-classifier">
               <div class="project-content">
@@ -573,7 +516,7 @@
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="https://sora.chatgpt.com/g/gen_01jzdg49vefya9rgsym2n5hhep" loading="lazy">
+                  <img src="https://videos.openai.com/vg-assets/assets%2Ftask_01jzdg491tff0sf8ckas7s8c6n%2F1751726123_img_0.webp?st=2025-07-05T12%3A45%3A37Z&se=2025-07-11T13%3A45%3A37Z&sks=b&skt=2025-07-05T12%3A45%3A37Z&ske=2025-07-11T13%3A45%3A37Z&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skoid=8ebb0df1-a278-4e2e-9c20-f2d373479b3a&skv=2019-02-02&sv=2018-11-09&sr=b&sp=r&spr=https%2Chttp&sig=XVNiX%2FJSKaAsyJI2K9DgZZNYkK7B3mQXr4HeBmXhZn0%3D&az=oaivgprodscus" loading="lazy">
                 </figure>
                 <h3 class="project-title">Genix Ai</h3>
                 <p class="project-description">A cutting-edge AI assistant that delivers natural, context-aware conversations. Maintains dialogue continuity for coherent discussions and provides insightful, well-structured responses.</p>
