--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="https://videos.openai.com/vg-assets/assets%2Ftask_01jzdhv52af0qad5bk4535qe72%2F1751727921_img_0.webp?st=2025-07-05T13%3A50%3A02Z&se=2025-07-11T14%3A50%3A02Z&sks=b&skt=2025-07-05T13%3A50%3A02Z&ske=2025-07-11T14%3A50%3A02Z&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skoid=8ebb0df1-a278-4e2e-9c20-f2d373479b3a&skv=2019-02-02&sv=2018-11-09&sr=b&sp=r&spr=https%2Chttp&sig=hswF%2B%2FZFVUHkY%2FBuLiIif%2BRrZ5oHF75pZ%2Fv84sxTZSQ%3D&az=oaivgprodscus" alt="Churn Modeling project screenshot" loading="lazy">
+                  <img src="Genix.png" alt="Churn Modeling project screenshot" loading="lazy">
                 </figure>
                 <h3 class="project-title">Churn Modeling</h3>
                 <p class="project-description">A machine learning model to predict customer churn using neural networks, built with TensorFlow and deployed on Streamlit.</p>
