--- a/index.html
+++ b/index.html
@@ -433,13 +433,15 @@
             </ul>
           </div>
           <ul class="project-list">
+
+            
             <li class="project-item active glow-border-rainbow" data-filter-item data-category="all" data-project-id="churn-modeling">
               <div class="project-content">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="Genix.png" alt="Churn Modeling project screenshot" loading="lazy">
+                  <img src="churrn.png" alt="Churn Modeling project screenshot" loading="lazy">
                 </figure>
                 <h3 class="project-title">Churn Modeling</h3>
                 <p class="project-description">A machine learning model to predict customer churn using neural networks, built with TensorFlow and deployed on Streamlit.</p>
@@ -476,12 +478,12 @@
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="https://img.freepik.com/free-vector/candle-stick-forex-trading-chart-background-financial-growth_1017-49808.jpg?ga=GA1.1.687002338.1742226390&semt=ais_hybrid&w=740" alt="Salary Prediction project screenshot" loading="lazy">
+                  <img src="signal predict.png" alt="Salary Prediction project screenshot" loading="lazy">
                 </figure>
-                <h3 class="project-title">XAUUSD Signal Predictor</h3>
+                <h3 class="project-title">XAUUSD & ETH/USD Signal Predictor</h3>
                 <p class="project-description">It predict signal with 95%+ accuracy for Gold with the help of real current and previous data, It is Subscruption based.Contact to gain access</p>
                 <div class="project-links">
-                  <a href="https://xauusd-pred-lluubmf3yznawydgrfpjax.streamlit.app/" class="project-link-btn" target="_blank" aria-label="GitHub repository">
+                  <a href="https://github.com/muhammadawaislaal/Xauusd-Pred" class="project-link-btn" target="_blank" aria-label="GitHub repository">
                     <ion-icon name="logo-github"></ion-icon> GitHub
                   </a>
                   <a href="https://xauusd-pred-lluubmf3yznawydgrfpjax.streamlit.app/" class="project-link-btn live-preview" target="_blank" aria-label="Live preview">Live Preview</a>
@@ -516,7 +518,7 @@
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="https://videos.openai.com/vg-assets/assets%2Ftask_01jzdg491tff0sf8ckas7s8c6n%2F1751726123_img_0.webp?st=2025-07-05T12%3A45%3A37Z&se=2025-07-11T13%3A45%3A37Z&sks=b&skt=2025-07-05T12%3A45%3A37Z&ske=2025-07-11T13%3A45%3A37Z&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skoid=8ebb0df1-a278-4e2e-9c20-f2d373479b3a&skv=2019-02-02&sv=2018-11-09&sr=b&sp=r&spr=https%2Chttp&sig=XVNiX%2FJSKaAsyJI2K9DgZZNYkK7B3mQXr4HeBmXhZn0%3D&az=oaivgprodscus" loading="lazy">
+                  <img src="Genix.png" loading="lazy">
                 </figure>
                 <h3 class="project-title">Genix Ai</h3>
                 <p class="project-description">A cutting-edge AI assistant that delivers natural, context-aware conversations. Maintains dialogue continuity for coherent discussions and provides insightful, well-structured responses.</p>
