--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
                   </div>
                   <img src="Genix.png" loading="lazy">
                 </figure>
-                <h3 class="project-title">Genix Ai</h3>
+                <h3 class="project-title">Gynx Ai</h3>
                 <p class="project-description">A cutting-edge AI assistant that delivers natural, context-aware conversations. Maintains dialogue continuity for coherent discussions and provides insightful, well-structured responses.</p>
                 <div class="project-links">
                   <a href="https://github.com/muhammadawaislaal/Conversional-bot" class="project-link-btn" target="_blank" aria-label="GitHub repository">
