--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           </li>
         </ul>
         <div class="separator"></div>
-        <a href="https://drive.google.com/file/d/13hVkm3JeGxusK2NRfAOZIL0kg_tryuD2/view?usp=drive_link" class="cv-download-btn" target="_blank" aria-label="Download CV">
+        <a href="https://drive.google.com/file/d/1H0G9bNdwa-q4IjQuhTyB1WZ0eJyu7aOe/view?usp=sharing" class="cv-download-btn" target="_blank" aria-label="Download CV">
           <ion-icon name="download-outline"></ion-icon>
           <span>Download CV</span>
         </a>
