--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Muhammad Awais Laal - Aspiring Gen AI Specialist Portfolio</title>
+  <title>Muhammad Awais Laal - Gen AI Specialist Portfolio</title>
   <meta name="description" content="Portfolio of Muhammad Awais Laal, an Aspiring Gen AI Specialist offering expertise in AI development, machine learning, data analysis, and web applications.">
   <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/6295/6295638.png" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
@@ -65,7 +65,7 @@
             </div>
             <div class="contact-info">
               <p class="contact-title">Experience</p>
-              <p>3+ Years in AI,ML& Web D </p>
+              <p>3+ Years in AI,ML</p>
             </div>
           </li>
         </ul>
@@ -123,7 +123,7 @@
         </header>
         <section class="about-text">
           <p>
-            I'm Muhammad Awais Laal, an Aspiring Gen AI Developer and web developer & Designer from Punjab, Pakistan, passionate about creating innovative AI solutions. With expertise in machine learning, deep learning, and web development, I build scalable applications to solve real-world problems.
+            I'm Muhammad Awais Laal, an Gen AI Developer and web developer & Designer from Punjab, Pakistan, passionate about creating innovative AI solutions. With expertise in machine learning, deep learning, and web development, I build scalable applications to solve real-world problems.
           </p>
           <p>
             My mission is to drive impact through AI-driven technologies. I collaborate with clients across industries, delivering high-quality, tailored solutions. Explore my portfolio to see my work!
@@ -181,7 +181,7 @@
                 <img src="https://cdn-icons-png.flaticon.com/512/10812/10812707.png" alt="Web Development icon" width="40">
               </div>
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web Development</h4>
+                <h4 class="h4 service-item-title">Web Development & Designing</h4>
                 <p class="service-item-text">
                   Designing and developing responsive, user-friendly web applications.
                 </p>
