--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
             <li class="frameworks-item">Flask</li>
             <li class="frameworks-item">TensorFlow</li>
             <li class="frameworks-item">PyTorch</li>
-            <li class="frameworks-item">Django</li>
+            <li class="frameworks-item">Lang Chain</li>
           </ul>
         </section>
         <section class="libraries">
@@ -454,6 +454,49 @@
                 </div>
               </div>
             </li>
+
+
+
+
+
+
+
+
+             <li class="project-item active glow-border-rainbow" data-filter-item data-category="all" data-project-id="churn-modeling">
+              <div class="project-content">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="20250808_1723_AI-Driven Workspace_simple_compose_01k24t5951fq3taeaamwja96s1.png" alt="Churn Modeling project screenshot" loading="lazy">
+                </figure>
+                <h3 class="project-title">Business Analyst  chatbot</h3>
+                <p class="project-description">BI Chatbot – a conversational analytics tool powered by LangChain, Groq’s ultra-fast LLM, and Streamlit.
+It allows users to upload datasets, ask natural language questions, and instantly receive business intelligence insights with visualizations and downloadable PDF reports.</p>
+                <div class="project-links">
+                  <a href="https://github.com/muhammadawaislaal/BI_ChatBot" class="project-link-btn" target="_blank" aria-label="GitHub repository">
+                    <ion-icon name="logo-github"></ion-icon> GitHub
+                  </a>
+                  <a href="https://bichatbot-xgoauckya7ztptkgzzafun.streamlit.app/" class="project-link-btn live-preview" target="_blank" aria-label="Live preview">Live Preview</a>
+                </div>
+              </div>
+            </li>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            
 
 
             
