--- a/index.html
+++ b/index.html
@@ -432,7 +432,41 @@
               </li>
             </ul>
           </div>
-          <ul class="project-list">
+          <ul class="project-list"> 
+
+
+
+
+
+
+
+
+
+
+
+             <li class="project-item active glow-border-rainbow" data-filter-item data-category="all" data-project-id="churn-modeling">
+              <div class="project-content">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="sqlagent.png" alt="Churn Modeling project screenshot" loading="lazy">
+                </figure>
+                <h3 class="project-title">SQL Agent</h3>
+                <p class="project-description">An AI-powered SQL assistant built with Streamlit, SQLite, and OpenAI GPT models. This app allows users to interact with a database using natural language queries instead of writing SQL manually..</p>
+                <div class="project-links">
+                  <a href="https://github.com/muhammadawaislaal/database-agent/tree/main" class="project-link-btn" target="_blank" aria-label="GitHub repository">
+                    <ion-icon name="logo-github"></ion-icon> GitHub
+                  </a>
+                  <a href="https://database-agent-jukbu9mxhdc6ajufedhfbz.streamlit.app/" class="project-link-btn live-preview" target="_blank" aria-label="Live preview">Live Preview</a>
+                </div>
+              </div>
+            </li>
+
+
+
+
+            
 
 
 
