--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <aside class="sidebar" data-sidebar>
       <div class="sidebar-info">
         <figure class="avatar-box">
-          <img src="https://avatars.githubusercontent.com/u/199569350?v=4" alt="Muhammad Awais Laal" width="80">
+          <img src="my profile pic .jpg" alt="Muhammad Awais Laal" width="80">
           <span class="live-dot"></span>
         </figure>
         <div class="info-content">
