--- a/index.html
+++ b/index.html
@@ -442,6 +442,38 @@
 
 
 
+             <li class="project-item active glow-border-rainbow" data-filter-item data-category="all" data-project-id="churn-modeling">
+              <div class="project-content">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="yt sumarizer.png" alt="Churn Modeling project screenshot" loading="lazy">
+                </figure>
+                <h3 class="project-title">AI-powered YT Vid Summarizer</h3>
+                <p class="project-description">Save 95% of your video consumption time while capturing 100% of the value. Get instant knowledge extraction from tutorials, lectures, podcasts, and presentations with military-grade accuracy.</p>
+                <div class="project-links">
+                  <a href="https://github.com/muhammadawaislaal/youtube-vid-sumerizer-/tree/main" class="project-link-btn" target="_blank" aria-label="GitHub repository">
+                    <ion-icon name="logo-github"></ion-icon> GitHub
+                  </a>
+                  <a href="https://v73tmxzlzuzy2tj5fdkhjm.streamlit.app/" class="project-link-btn live-preview" target="_blank" aria-label="Live preview">Live Preview</a>
+                </div>
+              </div>
+            </li>
+
+
+
+
+            
+
+
+
+
+
+
+
+
+
 
 
              <li class="project-item active glow-border-rainbow" data-filter-item data-category="all" data-project-id="churn-modeling">
