--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </figure>
         <div class="info-content">
           <h1 class="name" title="Muhammad Awais Laal">Muhammad Awais Laal</h1>
-          <p class="title">Gen AI Developer & Web D..</p>
+          <p class="title">Gen AI Developer</p>
         </div>
         <button class="info_more-btn" data-sidebar-btn aria-label="Toggle contacts">
           <span>Show Contacts</span>
@@ -123,7 +123,7 @@
         </header>
         <section class="about-text">
           <p>
-            I'm Muhammad Awais Laal, an Gen AI Developer and web developer & Designer from Punjab, Pakistan, passionate about creating innovative AI solutions. With expertise in machine learning, deep learning, and web development, I build scalable applications to solve real-world problems.
+            I'm Muhammad Awais Laal, an Gen AI Developer from Punjab, Pakistan, passionate about creating innovative AI solutions. With expertise in machine learning, deep learning, and web development, I build scalable applications to solve real-world problems.
           </p>
           <p>
             My mission is to drive impact through AI-driven technologies. I collaborate with clients across industries, delivering high-quality, tailored solutions. Explore my portfolio to see my work!
