--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@ It allows users to upload datasets, ask natural language questions, and instantl
                   </div>
                   <img src="signal predict.png" alt="Salary Prediction project screenshot" loading="lazy">
                 </figure>
-                <h3 class="project-title">XAUUSD & ETH/USD Signal Predictor</h3>
+                <h3 class="project-title">XAUUSD & ETH/USD Trading Signal Predictor</h3>
                 <p class="project-description">It predict signal with 95%+ accuracy for Gold with the help of real current and previous data, It is Subscruption based.Contact to gain access</p>
                 <div class="project-links">
                   <a href="https://github.com/muhammadawaislaal/Xauusd-Pred" class="project-link-btn" target="_blank" aria-label="GitHub repository">
